--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "jquery": "latest",
     "handlebars": "latest",
     "bourbon": "~4.2.3",
-    "neat": "~1.7.2"
+    "neat": "~1.7.2",
+    "jquery-mobile-bower": "~1.4.5"
   }
 }
