--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   "license": "MIT",
   "author": "Shaun Janssens",
   "devDependencies": {
-    "gulp": "latest",
-    "gulp-coffee": "latest",
-    "gulp-jade": "latest",
-    "gulp-sass": "latest",
-    "gulp-util": "latest"
+    "del": "^1.2.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-cache": "^0.2.10",
+    "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-livereload": "^3.8.0",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-ruby-sass": "^1.0.5",
+    "gulp-uglify": "^1.2.0"
   }
 }
