--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^1.0.5",
+    "gulp-shell": "^0.4.2",
     "gulp-uglify": "^1.2.0"
   }
 }
